# Praca-Dyplomowa

./: .gitignore  CMakeLists.txt  prj.conf
include/: bluetooth_anchor.h  bluetooth_device_control.h  bluetooth_global.h  bluetooth_initiator.h  bluetooth_reflector.h  common.h  cs_test_params.h  distance_estimation.h  logic_main.h
src/: connected_cs_initiator.c  connected_cs_reflector.c  distance_estimation.c  main.c
src/bluetooth/: bluetooth_anchor.c  bluetooth_device_control.c  bluetooth_global.c  bluetooth_global.h  bluetooth_initiator.c  bluetooth_initiator.h  bluetooth_reflector.c  bluetooth_reflector.h
src/logic_manager/: logic_main.c
